[package]
name = "reflection-macros"
version = "0.0.1"
description = "Reflection"
repository = "https://github.com/GuilhermeWerner/Reflection"
license = "MIT"
edition = "2021"
publish = false

[lib]
name = "Reflection_Macros"
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "1.0.48", features = ["full"] }
